--- a/calculadora/app/src/main/res/layout/activity_main.xml
+++ b/calculadora/app/src/main/res/layout/activity_main.xml
@@ -8,26 +8,28 @@
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
-    tools:context="br.ufpe.cin.residencia.calculadora.MainActivity">
+    tools:context="br.ufpe.cin.if710.calculadora.MainActivity">
 
     <TextView
         android:id="@+id/text_info"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginBottom="20dp"
-        android:textSize="30sp" />
+        android:textSize="30sp"
+        android:gravity="end"/>
 
+    <!--android:inputType="numberDecimal"-->
     <EditText
         android:id="@+id/text_calc"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_below="@id/text_info"
         android:enabled="false"
-        android:gravity="bottom"
-        android:inputType="numberDecimal"
+        android:gravity="end"
         android:lines="2"
         android:maxLines="2"
-        android:textSize="40sp" />
+        android:textSize="40sp"
+        />
 
     <LinearLayout
         android:layout_width="match_parent"
